chore: API docs

--- a/docs/api/package_manager/v1.md
+++ b/docs/api/package_manager/v1.md
@@ -29,11 +29,11 @@ Local package types.
 #### `__`init`__`
 
 ```python
-def __init__(
-        path: Path,
-        dev_packages: Optional[PackageIdToHashMapping] = None,
-        third_party_packages: Optional[PackageIdToHashMapping] = None,
-        config_loader: ConfigLoaderCallableType = load_configuration) -> None
+def __init__(path: Path,
+             dev_packages: Optional[PackageIdToHashMapping] = None,
+             third_party_packages: Optional[PackageIdToHashMapping] = None,
+             config_loader: ConfigLoaderCallableType = load_configuration,
+             logger: Optional[logging.Logger] = None) -> None
 ```
 
 Initialize object.
